--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
               <a href="indexx500_prod.html">Indexx 500 Production(IN500)</a>
               <hr />
               <p>ETH</p>
-              <a href="indexx500_prod_eth.html"
-                >Indexx 500 Production(IN500)</a
-              >
+              <a href="indexx500_prod_eth.html">Indexx 500 Production(IN500)</a>
             </li>
             <li>
               <p>BSC</p>
@@ -142,16 +140,12 @@
               <a href="crypto_prod.html">Indexx Crypto Production(INXC)</a>
               <hr />
               <p>ETH</p>
-              <a href="crypto_prod_eth.html"
-                >Indexx Crypto Production(INXC)</a
-              >
+              <a href="crypto_prod_eth.html">Indexx Crypto Production(INXC)</a>
             </li>
             <li>
               <p>BSC</p>
               <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br />
-              <a href="indexxusd+_prod.html"
-                >Indexx USD+ Production(iUSD+)</a
-              >
+              <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)</a>
               <hr />
               <p>ETH</p>
               <a href="indexxusd+_prod_eth.html"
@@ -1905,10 +1899,16 @@
         var gas = await window.web3.eth.getGasPrice();
         var to = $("#address1").val();
         var value = $("#mint1").val();
+        console.log(value, to)
+        const gasEstimate = await window.contract.methods
+          .mint(to, web3.utils.toWei(value, "ether"))
+          .estimateGas({ from: account });
+        console.log("Gas estimate:", gasEstimate);
 
+        console.log("gas", gas);
         let coolNumber = await window.contract.methods
           .mint(to, web3.utils.toWei(value, "ether"))
-          .send({ from: account, gasPrice: gas })
+          .send({ from: account, gas: gasEstimate, gasPrice: gas })
           .on("transactionHash", function (hash) {
             console.log(hash);
             alert("Mint successfully, wait for 5 seconds to reload");
